树莓派型号图

--- a/desktop.ini
+++ b/desktop.ini
@@ -4,3 +4,4 @@
 фад╩╫ьм╪ 2025-07-25 145652.png=@фад╩╫ьм╪ 2025-07-25 145652.png,0
 фад╩╫ьм╪ 2025-07-25 145913.png=@фад╩╫ьм╪ 2025-07-25 145913.png,0
 фад╩╫ьм╪ 2025-07-25 150222.png=@фад╩╫ьм╪ 2025-07-25 150222.png,0
+фад╩╫ьм╪ 2025-07-25 224903.png=@фад╩╫ьм╪ 2025-07-25 224903.png,0
